assets/css/style.css
/* ... */
#circle-cover-bg-left {
    background: url('../images/david_snowden.jpeg');
    width: 125px;
    height: 125px;
    background-size: contain;
    background-position: center;
    border-radius: 50%;
}

#circle-cover-bg-centre {
    background: url('../images/lynne_greenfeather.jpeg');
    width: 125px;
    height: 125px;
    background-size: contain;
    background-position: center;
    border-radius: 50%;
}

#circle-cover-bg-right {
    background: url('../images/jens_pfeiffer.jpeg');
    width: 125px;
    height: 125px;
    background-size: contain;
    background-position: center;
    border-radius: 50%;
}

/* footer info boxes */

.footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 90px;
    background-color: #fff;
}

.infobox-content-1 {
    font-size: 25px;
    display: flex;
    float: left;
    justify-content: center;
    padding-left: 80px;
    word-spacing: 20px;
    width: 50%;
}

.title-left {
    color: #2F5596;
    text-decoration: none;
    font-family: "Cabin", Sans-serif;
    font-size: 85%;
    letter-spacing: 4px;
    font-weight: 500;
    line-height: 30px;
    margin: 20px 0px 5px 0px;
    border-bottom: 1px solid #8c0e0f
}

.infobox-content-2 {
    font-size: 25px;
    display: flex;
    float: right;
    justify-content: center;
    padding-right: 80px;
    word-spacing: 20px;
    width: 50%;
}

.title-right {
    color: #2F5596;
    text-decoration: none;
    font-family: "Cabin", Sans-serif;
    font-size: 85%;
    letter-spacing: 4px;
    font-weight: 500;
    line-height: 30px;
    margin: 20px 0px 5px 0px;
    border-bottom: 1px solid #8c0e0f
}

.social-media-icons {
    color: #2F5596;
    font-size: 25px;
    display: flex;
    float: right;
    justify-content: space-evenly;
    padding-right: 80px;
    word-spacing: 20px;
    width: 50%;
}

.fab:hover {
    color: #0b2838;
}

.contact-info {
    color: #2F5596;
    font-family: "Raleway", sans-serif;
    font-size: 110%;
    display: flex;
    float: left;
    justify-content: center;
    padding-left: 40px;
    width: 50%;
}

/* Code for Back to top button */
/* This snippet of code was copied as a whole from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */

#myBtn {
    display: none;
    position: fixed;
    top: 20px;
    right: 10px;
    z-index: 99;
    font-size: 18px;
    border: none;
    outline: none;
    background-color: rgba(224, 184, 192, 0.6);
    color: rgba(0, 20, 20, 0.6);
    cursor: pointer;
    padding: 6px;
    border-radius: 4px;
}

#myBtn:hover {
    background-color: #8c0e0f;
    color: white;
}



/* planning.html */

#plan-hero-image-home {
    height: 100vh;
    width: 100vw;
    background: url('../images/pexels-laura-tancredi-7078691.jpg');
    /* Create parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
}

.headlines-h2 {
    text-transform: none;
    font-size: 120%;
}

.plan-text-container {
    margin: 0 auto;
    margin-bottom: 120px;
    width: 66.66%;
    height: auto;
    padding-top: 50px;
}

.plan-text-container>h2 {
    margin-top: 20px;
    text-transform: none;
    text-align: center;
    color: #8c0e0f;
    font-weight: 600;
    line-height: 1.4em;
    font-size: 180%;
    font-weight: 700;
}

.plan-text-container>p {
    margin-top: 10px;
    margin-bottom: 15px;
    text-transform: none;
    text-align: center;
    color: #2F5596;
    font-family: "Raleway", sans-serif;
    font-weight: 300;
    font-size: 17px;
    line-height: 1.2em;
}

.list-container {
    width: 250px;
    height: 130px;
    margin: 0 auto;
    padding: 20px;
    padding-bottom: 25px;
    background-color: rgba(221, 226, 198, 0.5);
    border: 3px solid #8c0e0f;
    border-radius: 25px;
    box-shadow: 10px 5px 5px #0b2838;
}

.list {
    color: #2F5596;
    text-align: center;
}


/* tactics.html */

#tactics-hero-image-home {
    height: 100%;
    width: 100%;
    background: url('../images/pexels-sevenstorm-juhaszimrus-1603288.jpg');
    /* Create parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.tactics-text-container {
    margin: 0 auto;
    margin-bottom: 120px;
    width: 66.66%;
    height: auto;
    padding-top: 50px;
}

.tactics-text-container>h2 {
    margin-top: 20px;
    text-transform: none;
    text-align: center;
    color: #8c0e0f;
    font-weight: 600;
    line-height: 1.4em;
    font-size: 180%;
    font-weight: 700;
}

.tactics-text-container>p {
    margin-top: 10px;
    margin-bottom: 15px;
    text-transform: none;
    text-align: center;
    color: #2F5596;
    font-family: "Raleway", sans-serif;
    font-weight: 300;
    font-size: 17px;
    line-height: 1.2em;
}

.tactics-table-container {
    max-width: 80%;
    margin: 0 auto;
    background-color: rgba(221, 226, 198, 0.5);
    border: 3px solid #8c0e0f;
    border-radius: 25px;
    box-shadow: 10px 5px 5px #0b2838;
    margin-top: 10px;
    margin-bottom: 90px;
}

.tactics-table-container>h2 {
    text-align: center;
    color: #8c0e0f;
    margin-top: 30px;
    margin-bottom: 15px;
    padding: 15px;
    background-color: rgba(221, 226, 198, 0.5);
    font-size: 180%;
    font-weight: 700;
}

.tactics-table-5cols {
    font-family: "Raleway", sans-serif;
    border-collapse: collapse;
    width: 80%;
    margin: 0 auto;
    margin-bottom: 1rem;
}

.Rtable-cell {
    box-sizing: border-box;
    padding: 0.8em 1.2em;
    overflow: hidden;
    list-style: none;
    border: none;
    font-family: "Raleway", sans-serif;
}

.Rtable-cell>h3 {
    margin: 0;
    border-bottom: 1px solid #8c0e0f;
}

.tactics-table-5cols>.Rtable-cell {
    width: 20%;
}


/* contact.html */

.contact-page-outer {
    height: 100vh;
    width: 100%;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: left;
}
/* ... */

